# GBC_AMML_Lab3

./: Group1 Lab Exercise 11.ipynb  Lab Exercise 11.ipynb  Lab Exercise 12.ipynb  Lab Exercise 13.ipynb  pyproject.toml
