[project]
name = "lab3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.0",
    "numpy>=2.2.2",
    "opencv-python>=4.11.0.86",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
]
